[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "eda-cli"
version = "0.2.0"
description = "EDA CLI и HTTP API для анализа качества датасетов"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pytest>=9.0.1",
    "typer>=0.20.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
]

[project.scripts]
eda-cli = "eda_cli.cli:app"
